microc/tests/expected/err-record1.uc.out
../examples/err-record1.uc:[5:19]: execution error: Nested records are not supported, use pointers
      n = alloc {c: k, d: 4}; // error: nested records are not allowed
                    ^

1
